<resources>
    <string name="app_name">My Instagram</string>
    <string name="ID">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="login_withFb">페이스북 계정으로 계속</string>
    <string name="register_acc">계정이 없으신가요? 가입하기.</string>
    <string name="signUp_title">계정 생성하기</string>
    <string name="email_add">이메일 주소</string>
    <string name="signUp">계정 생성</string>
    <string name="password_restricted">비밀번호(6자 이상)</string>
    <string name="signUp_sub">가입 성공 시, 로그인 창으로 돌아갑니다.</string>
    <string name="userName_title">계정명 설정</string>
    <string name="userName_text">계정명(2자 이상)</string>
    <string name="userName_register">중복확인 및 등록</string>
    <string name="upload">게시물 올리기</string>
    <string name="upload_btn">업로드</string>
    <string name="contexts">내용</string>
    <string name="upload_success">업로드에 성공하였습니다.</string>
    <string name="warn_select_image">이미지를 선택하세요.</string>
    <string name="warn_type_text">내용을 입력하세요.</string>
    <string name="delete">게시물 삭제</string>
    <string name="delete_success">게시물 삭제가 완료되었습니다.</string>
    <string name="follow_button">팔로우</string>
    <string name="follow_cancel_button">팔로우 취소</string>
    <string name="signOut_button">로그아웃</string>
    <string name="search_text">검색...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>