<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp_title"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_marginTop="14dp"
        android:id="@+id/signUp_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp_sub"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/grey_text"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/signUp_sub"
        android:layout_below="@id/signUp_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_blank"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/email_add"
        android:textSize="14sp"
        android:paddingHorizontal="16dp"
        android:inputType="textEmailAddress"
        android:id="@+id/userId"
        android:layout_below="@id/signUp_sub"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_blank"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password_restricted"
        android:textSize="14sp"
        android:paddingHorizontal="16dp"
        android:inputType="textPassword"
        android:id="@+id/userPw"
        android:layout_below="@id/userId"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_btn"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:enabled="false"
        android:id="@+id/signUp_btn"
        android:layout_below="@id/userPw"/>
</RelativeLayout>