<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userName_title"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_marginTop="14dp"
        android:id="@+id/signUp_title"/>
    <TextView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/signOut_button"
        android:textColor="@color/theme_color"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:id="@+id/signOut_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_blank"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/userName_text"
        android:textSize="14sp"
        android:paddingHorizontal="16dp"
        android:inputType="text"
        android:id="@+id/userName_text"
        android:layout_below="@id/signUp_title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_btn"
        android:text="@string/userName_register"
        android:textColor="@color/white"
        android:enabled="false"
        android:id="@+id/userName_register_btn"
        android:layout_below="@id/userName_text"/>
</RelativeLayout>