<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signIn_layout"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/register_line">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:id="@+id/logo">
        </ImageView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_blank"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/ID"
            android:textSize="14sp"
            android:paddingHorizontal="16dp"
               android:inputType="text"
            android:id="@+id/userId"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_blank"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textSize="14sp"
            android:paddingHorizontal="16dp"
            android:inputType="textPassword"
            android:id="@+id/userPw"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_btn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:enabled="false"
            android:id="@+id/login_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:paddingHorizontal="20dp">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_weight="5"
                android:background="@color/grey_solid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="또는" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="5"
                android:background="@color/grey_solid" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_btn"
            android:text="@string/login_withFb"
            android:textColor="@color/white" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/register_btn"
        android:background="@color/grey_solid"
        android:id="@+id/register_line"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/register_acc"
        android:id="@+id/register_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        android:textColor="@color/grey_text"
        />

</RelativeLayout>